<resources>
    <string name="app_name">ExpensesApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="password_repeat">Password repeat</string>
    <string name="loading">Loading…</string>
    <string name="an_error_occurred">An error occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>